2009-02-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSZone.m: restore binary compatibility with earlier code.

2009-01-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: For file URL, make relative path absolute.
	* Source/GSHTTPURLHandle.m:
	* Source/Additions/GSMime.m:
	Change HTTP status code to be an NSNumber rather than NSString
	for MacOS-X compatibility

2009-01-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/readme.texi:
	* README: Remove reference to Testing
	* Examples/nsconnection_server.m:
	* Examples/diningPhilosophers.m:
	* Examples/nsconnection_client.m:
	* Examples/nsconnection.m: Transferred from Testing
	* Testing: removed
	Removed Testing subdirectory.  Now that locking tests are in the
	testsuite all the code here is probably obsolete.  If we find any
	cases where that's not the case, we should recover anything we
	need from svn and add it to the testsuite.

2009-01-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLock.m: Fixed last change to match MacOS-X behavior.

2009-01-29 17:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSLock.m: Change to correct documented/tested and observed
	inconsistency between Cocoa (and OpenStep) and GNUstep.  
	Reinstatement of correction for bug #25307.   Testing on both OpenStep
	and on Cocoa clearly illustrates that throwing an exception in this
	case was incorrect.  It now emits a warning when the lock is attempted
	again, but does not throw an exception.
	* Testing/locktest/locktest.m: Change to test to correctly test
	[NSConditionLock lock]

2009-01-28 21:48-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Testing/locktest/GNUmakefile
	* Testing/locktest/GNUmakefile.preamble
	* Testing/locktest/locktest.1
	* Testing/locktest/LockTestInfo.plist
	* Testing/locktest/locktest.m
	* Testing/locktest/locktest_Prefix.pch
	* Testing/locktest/locktest.xcodeproj/project.pbxproj
	* Testing/locktest/PC.project: Test which confirms the behavior 